--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h3>Simple to use for your app, products showcase and your inspiration</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique
 							bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis
-							arcu et eros porta lobortis sit </p>
+							arcu et eros porta lobortis.</p>
 						<ul class="icons d-flex">
 							<li class="icons__item">
 								<a href="#">
